# home-hub-agent

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main_home_sensor.cpp
test/: CMakeLists.txt
